# speech2write

./: README.md  keep_alive.py  main.py  pyproject.toml  sp2wr.py
