[tool.poetry]
name = "repl_python3_speech2write"
version = "0.1.0"
description = ""
authors = ["chandukiran13 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
